# barotropic

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: docs.yml  tests.yml
barotropic/: __init__.py  constants.py  diagnostic.py  diagnostics.py  formatting.py  grid.py  init.py  io.py  model.py  plot.py  rhs.py  state.py
barotropic/tests/: test_examples.py  test_grid.py  test_state.py
docs/: README.md  build  index.html  push
docs/barotropic/: diagnostic.m.html  index.html  init.m.html  io.m.html  plot.m.html  rhs.m.html
docs/source/: conf.py  diagnostic.rst  diagnostics.rst  index.rst  io.rst  model.rst  module.rst  notes.rst  plot.rst  rhs.rst  state.rst  tips.rst
docs/source/_static/: custom.css
docs/source/_templates/: globaltoc.html
docs/templates/: css.mako  html.mako
examples/: rwp-diagnostic-ghinassi-et-al-2018.ipynb  rwp-diagnostics-ghinassi-et-al-2018.ipynb  waveguidability-wirth-2020.ipynb  wavenumber-based-filtering.ipynb
src/barotropic/: __init__.py  grid.py  io.py  model.py  plot.py  state.py
tests/: __init__.py  test_grid.py  test_io.py  test_state.py
