[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "wheel"]

[project]
name = "barotropic"
authors = [
    { name="Christopher Polster", email="chpolste@tuta.io" },
]
description = "A framework for barotropic analysis and modelling of the atmosphere"
readme = "readme.md"
requires-python = ">=3.9"
license = { file="LICENSE" }
dynamic = ["version"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
    "numpy",
    "scipy",
    "pyspharm",
]

[project.optional-dependencies]
test = [
    "pytest >=7"
]
extras = [
    "matplotlib",
    "PyWavelets >=1.1.0.dev",
    "hn2016_falwa",
]

[project.urls]
documentation = "https://chpolste.github.io/barotropic"
source = "https://github.com/chpolste/barotropic"

[tool.setuptools.packages.find]
where =  ["./src"]
include = ["barotropic"]

[tool.setuptools.dynamic]
version = { attr="barotropic.__version__" }

[tool.pytest.ini_options]
pythonpath = ["src"]

